# pas_helper

./: .gitattributes  .gitignore  CMakeLists.txt  PROJECT_CONTEXT.md  README.md
.cursor/rules/: cpp-standards.mdc  project-context.mdc  qml-standards.mdc
resources/presets/: subsystems.json
src/: main.cpp
src/core/: AppController.cpp  AppController.h  PciAnalyzer.cpp  PciAnalyzer.h  PciDeviceModel.cpp  PciDeviceModel.h  PresetManager.cpp  PresetManager.h  ReportData.h  ReportEngine.cpp  ReportEngine.h  ReportParser.cpp  ReportParser.h  Storage.cpp  Storage.h  SubsystemModel.cpp  SubsystemModel.h  WorkItemModel.cpp  WorkItemModel.h
src/ui/: ReportTab.qml  WorkTab.qml  main.qml
src/ui/components/: DeviceForm.qml  PciPanel.qml  RecommendationsEditor.qml  SubsystemDetail.qml  SubsystemsPage.qml
